--- a/css/styles.css
+++ b/css/styles.css
@@ -227,7 +227,7 @@ span {
 .top {
         background-color:#2e2f42;
         padding: 188px 0;
-
+        margin: 0 auto;
         background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/heroimage.jpg);
          
         background-position: center;
@@ -674,4 +674,44 @@ a:focus {
 }
 
 
+.subs {
 
+}
+
+.subsparagraf {
+    margin-bottom: 16px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+}
+
+.subsform  {
+    display: flex;
+    gap: 24px;
+}
+
+.subslabel {
+
+}
+
+.subsinput {
+    width: 264px;
+    height: 40px;
+    border: 1px solid #ffffff;
+    background-color: transparent;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    padding-left: 16px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    color: #ffffff;
+    color #ffffff;
+
+}
+
+.subsinput::placeholder {
+    color: #ffffff; 
+}
