--- a/css/styles.css
+++ b/css/styles.css
@@ -833,12 +833,12 @@ a:focus {
 
 }
 
-.namename {
+.onediv {
     position: relative;
 
 }
 
-.inputname {
+.inputonediv {
     width: 100%;
     height: 40px;
     border: 1px solid rgba(46, 47, 66, 0.4);
@@ -851,7 +851,7 @@ a:focus {
 
 }
 
-.namesvg {
+.onesvg {
     position: absolute;
     left: 16px;
     top: 50%;
