--- a/css/styles.css
+++ b/css/styles.css
@@ -848,6 +848,7 @@ a:focus {
     outline: transparent;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     border-color: #4D5AE5; 
+    border: 1px solid rgba(46, 47, 66, 0.4);
 
 }
 
