--- a/css/styles.css
+++ b/css/styles.css
@@ -847,9 +847,10 @@ a:focus {
     padding-left: 38px;
     outline: transparent;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-     
-    
+}
 
+.inputonediv:focus {
+    border-color: #4D5AE5;
 }
 
 .onesvg {
@@ -859,4 +860,8 @@ a:focus {
     transform: translateY(-50%);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     fill: #4D5AE5;
+}
+
+.commentwind {
+    margin-bottom: 16px
 }
