--- a/css/styles.css
+++ b/css/styles.css
@@ -924,3 +924,26 @@ a:focus {
     border: none;
     fill: #F4F4FD;
 }
+
+.pplink {
+    text-decoration: underline;
+    text-decoration-color: #4d5ae5;
+    color: #4d5ae5; 
+}
+
+.sendbut {
+    display: block;
+    min-width: 169px;
+    height: 56px;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    cursor: pointer;
+    background-color: #4D5AE5;
+    border: none;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
