--- a/css/styles.css
+++ b/css/styles.css
@@ -854,7 +854,15 @@ a:focus {
     top: 50%;
     transform: translateY(-50%);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    fill: #4D5AE5;
+    fill: #2E2F42;
+}
+
+.onesvg:focus {
+    fill:#4D5AE5
+}
+
+.onesvg:hover {
+    fill:#4D5AE5
 }
 
 .commentwind {
@@ -875,13 +883,17 @@ a:focus {
     outline: transparent;
     resize: none;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
+ 
+}
 
-
+.textcom:focus {
+    border-color: #4D5AE5;
 }
 
 .checkwind {
     margin-bottom: 24px;
+    display: flex;
+    align-items: center;
 }
 
 .fivepoint {
@@ -894,7 +906,7 @@ a:focus {
     line-height: 1.17;
     letter-spacing: 0.04em;
     color: #8e8f99;
-
+    margin-left: 10px;
 }
 
 .policy {
@@ -941,5 +953,10 @@ a:focus {
     border: none;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     position: relative;
-
+    margin: 0 auto;
+    border-radius: 4px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    padding: 16px 32px;
+    width: 169px;
+    
 }
