--- a/css/styles.css
+++ b/css/styles.css
@@ -854,11 +854,11 @@ a:focus {
     top: 50%;
     transform: translateY(-50%);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    fill: #2E2F42;
+    color: #2E2F42;
 }
 
 .onesvg:focus {
-    
+    fill: #4D5AE5;
 }
 
 .onesvg:hover {
