--- a/css/styles.css
+++ b/css/styles.css
@@ -844,10 +844,14 @@ a:focus {
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.inputonediv:focus {
+/**.inputonediv:focus {
     border-color: #4D5AE5;
     fill:#4D5AE5;
 }
+**/
+.inputonediv:focus + .modal-icon { 
+    fill:#4D5AE5;
+ }
 
 .onesvg {
     position: absolute;
