--- a/css/styles.css
+++ b/css/styles.css
@@ -849,8 +849,9 @@ a:focus {
     fill:#4D5AE5;
 }
 **/
-.inputonediv:focus + .modal-icon { 
+.inputonediv:focus + .onesvg { 
     fill:#4D5AE5;
+    border-color: #4D5AE5;
  }
 
 .onesvg {
