--- a/css/styles.css
+++ b/css/styles.css
@@ -751,6 +751,7 @@ a:focus {
     height: 100%;
     background-color: rgba(46, 47, 66, 0.4);
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: none;
 }
 
 .window {
